# rfp

./: .dockerignore  .gitignore  fmc.yml  github-secrets.txt  index.html  main.py  pyproject.toml  run_analysis.py
.github/workflows/: server.yml
agents/: __init__.py  compliance_agent.py  evidence_agent.py  requirements_extractor_agent.py
app/: chatbot.py  create_vectordb.py  run_workflow.py
client/: client.py
config/: __init__.py  settings.py
docker/: server.Dockerfile
instructions/: RFP_Generalized_Template.md  Requirements_Extractor.yaml  chatbot.yaml  compliance.yaml  evidence.yaml  shared_rag.yaml  workflow.yaml
knowledge/: __init__.py
knowledge/indexing/: __init__.py  kstore.py
knowledge/retrieval/: __init__.py  query_fetch.py
models/: __init__.py  api.py  rag.py
observability/: __init__.py  costing.py
tools/: retrieval.py
utils/: file_utils.py  helper.py
workflow/: orchestration.py
